--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -101,6 +101,10 @@
         &.show {
             transform: translate3d(0, 0, 0);
         }
+
+        &.current > a {
+            color: $secondary-color;
+        }
     }
 
     .nav-link {
@@ -113,11 +117,37 @@
         color: #fff;
         text-decoration: none;
         @include easeOut;
+        &:hover {
+            color: $secondary-color;
+        }
     }
 }
 
 @for $x from 1 through 4 {
     .nav-item:nth-child(#{$x}) {
         transition-delay: $x * 0.1s;
+    }
+}
+
+//media quary mixin
+
+@mixin mediaSm {
+    @media screen and (max-width: 500px) {
+        @content;
+    }
+}
+@mixin mediaMd {
+    @media screen and (max-width: 768px) {
+        @content;
+    }
+}
+@mixin mediaLg {
+    @media screen and (min-width: 769px) and (max-width: 1170px) {
+        @content;
+    }
+}
+@mixin mediaXl {
+    @media screen and (min-width: 1171px) {
+        @content;
     }
 }
