--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,7 +2,7 @@ $primary-color: #444;
 $secondary-color: #eece1a;
 $show-home-image: true;
 $home-image: url("../img/background.jpg");
-$background-opacity: 0.5;
+$background-opacity: 0.7;
 
 @mixin easeOut {
     transition: all 0.5s ease-out;
@@ -26,5 +26,15 @@ $background-opacity: 0.5;
                 background: rgba($primary-color, $background-opacity);
             }
         }
+    }
+}
+
+//set text color occording to background color
+
+@function set-text-color($color) {
+    @if (lightness($color) > 40) {
+        @return (#000);
+    } @else {
+        @return (#fff);
     }
 }
