--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -9,7 +9,7 @@
         width: 28px;
         height: 3px;
         margin: 0 0 5px 0;
-        background: #fff;
+        background: set-text-color($primary-color);
         @include easeOut;
     }
 
@@ -19,10 +19,11 @@
         transform: rotate(180deg);
 
         .btn-line {
+            width: 20px;
+
             //line 1 - rotate
             &:nth-child(1) {
                 transform: rotate(45deg) translate(5px, 5px);
-                background: red;
             }
             // line 2 -hide
             &:nth-child(2) {
@@ -32,7 +33,6 @@
             //line-3 rotate
             &:nth-child(3) {
                 transform: rotate(-45deg) translate(7px, -6px);
-                background: yellow;
             }
         }
     }
@@ -88,8 +88,8 @@
         .portrait {
             width: 250px;
             height: 250px;
-            border-radius: 50%;
             border: 3px solid $secondary-color;
+            border-radius: 50%;
             background: url("../img/portrait.jpg");
         }
     }
@@ -114,7 +114,7 @@
         text-transform: uppercase;
         padding: 1rem 0;
         font-weight: 300;
-        color: #fff;
+        color: set-text-color($primary-color);
         text-decoration: none;
         @include easeOut;
         &:hover {
