--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -34,10 +34,20 @@
         height: 25vh;
         transform: translate3d(100%, 0, 0);
         .portrait {
-            background: url(../dist/img/portrait_small.jpg);
+            background: url(../img/portrait_small.jpg);
             width: 150px;
             height: 150px;
         }
+    }
+
+    .about-info {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "bioimage"
+            "bio"
+            "job1"
+            "job2"
+            "job3";
     }
 }
 //Smart phones
