--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,9 +1,15 @@
 //widescreen
 @include mediaXl {
+    .projects {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 //dexktop and laptops
 @include mediaLg {
+    .projects {
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 //tablets and small laptop screens
 @include mediaMd {
@@ -49,10 +55,17 @@
             "job2"
             "job3";
     }
+
+    .projects {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 //Smart phones
 @include mediaSm {
     main#home h1 {
         margin-top: 10vh;
+    }
+    .projects {
+        grid-template-columns: 1fr;
     }
 }
